:sparkles: shopをidで取得するAPIの作成
